# NPYViewer-Lucas

./: .gitignore  NPYViewer.py  pyproject.toml
Lang/: Translations.xml
