[project]
authors = [
  {name = "Your Name", email = "you@example.com"},
]
dependencies = [
  "numpy (>=2.3.2,<3.0.0)",
  "pandas (>=2.3.1,<3.0.0)",
  "matplotlib (>=3.10.5,<4.0.0)",
  "scipy (>=1.16.1,<2.0.0)",
  "networkx (>=3.5,<4.0)",
  "pyside6 (>=6.9.1,<7.0.0)",
]
description = ""
name = "npyviewer-lucas"
readme = "README.md"
requires-python = ">=3.12,<3.14"
version = "0.1.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=2.0.0,<3.0.0"]
